Update links in index.html to remove 'index.html'

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="container header-content">
       <div class="logo">Mavens Knowledge Base</div>
       <nav class="top-nav">
-        <a href="support-terms/index.html">Support Terms</a>
-        <a href="known-issues/index.html">Known Issues</a>
-        <a href="project-community/index.html">Project Community</a>
+        <a href="support-terms/">Support Terms</a>
+        <a href="known-issues/">Known Issues</a>
+        <a href="project-community/">Project Community</a>
         <a href="mailto:support@mavens.com">Email Us</a>
       </nav>
     </div>
@@ -34,22 +34,22 @@
       <div class="container">
         <div class="product-grid">
 
-          <a class="product-card" href="medical-information-cloud/index.html">
+          <a class="product-card" href="medical-information-cloud/">
             <h2>Mavens Medical Information Cloud</h2>
             <p>A regulated medical affairs platform for the life sciences industry.</p>
           </a>
 
-          <a class="product-card" href="komodo-insights-component/index.html">
+          <a class="product-card" href="komodo-insights-component/">
             <h2>Komodo Insights Component</h2>
             <p>A supplemental component to customer relationship management (CRM) tools.</p>
           </a>
 
-          <a class="product-card" href="scientific-publications-cloud/index.html">
+          <a class="product-card" href="scientific-publications-cloud/">
             <h2>Mavens Scientific Publications Cloud</h2>
             <p>A platform for the identification, planning, and drafting of scientific publication content.</p>
           </a>
 
-          <a class="product-card" href="mavens-install-service/index.html">
+          <a class="product-card" href="mavens-install-service/">
             <h2>Mavens Install Service</h2>
             <p>A service to install and upgrade our products.</p>
           </a>
