Update links and section structure in index.html

--- a/medical-information-cloud/index.html
+++ b/medical-information-cloud/index.html
@@ -9,11 +9,11 @@
 <body>
   <header class="site-header">
     <div class="container header-content">
-      <div class="logo"><a href="../index.html" style="text-decoration:none;color:inherit;">Mavens Knowledge Base</a></div>
+      <div class="logo"><a href="../" style="text-decoration:none;color:inherit;">Mavens Knowledge Base</a></div>
       <nav class="top-nav">
-        <a href="../support-terms/index.html">Support Terms</a>
-        <a href="../known-issues/index.html">Known Issues</a>
-        <a href="../project-community/index.html">Project Community</a>
+        <a href="../support-terms/">Support Terms</a>
+        <a href="../known-issues/">Known Issues</a>
+        <a href="../project-community/">Project Community</a>
         <a href="mailto:support@mavens.com">Email Us</a>
       </nav>
     </div>
@@ -27,12 +27,14 @@
       </div>
     </section>
 
-    <section class="product-grid-section">
+    <section class="content-section">
       <div class="container">
+        <h2>Topics</h2>
         <ul>
-          <li><a href="getting-started.html">Getting started</a></li>
-          <li><a href="installation.html">Installation & configuration</a></li>
-          <li><a href="user-guides.html">User guides</a></li>
+          <li><a href="#">Getting started overview</a></li>
+          <li><a href="#">Installation & configuration</a></li>
+          <li><a href="#">User and role setup</a></li>
+          <li><a href="#">Integrations</a></li>
         </ul>
       </div>
     </section>
